--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "combined-project",
   "version": "1.0.0",
@@ -6,7 +5,8 @@
   "scripts": {
     "start": "concurrently \"npm run frontend\" \"npm run backend\"",
     "frontend": "cd src/frontend && npm start",
-    "backend": "cd src/backend_folder && npm start"
+    "backend": "cd src/backend_folder && npm start",
+    "postinstall": "npm install concurrently"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
@@ -24,6 +25,7 @@
     "googleapis": "^118.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "mdb-react-ui-kit": "^9.0.0",
     "mongoose": "^7.5.0",
     "node-cron": "^3.0.0",
     "react": "^18.3.1",
@@ -33,8 +35,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "smooth-scroll": "^16.1.3",
-    "web-vitals": "^2.1.4",
-    "mdb-react-ui-kit": "^9.0.0"
+    "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
     "extends": [
@@ -54,7 +55,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "concurrently": "^6.5.1"
-  }
+  "description": "",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
