--- a/src/backend_folder/package.json
+++ b/src/backend_folder/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "PORT=5002 node index.js",
+    "start": "PORT=5002 node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
