--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "smooth-scroll": "^16.1.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "mdb-react-ui-kit": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
