--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -22,7 +22,7 @@
     "mdb-react-ui-kit": "^9.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --max-old-space-size=4096 start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
